2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Remove previous rules for
	scripts and install in share/cp-tools instead
	of share/java.
	* bin/currencygen,
	* bin/localegen,
	* bin/javah,
	* bin/javap: Removed.
	* bin/currencygen.in,
	* bin/gjavah.in,
	* bin/gjavap.in,
	* bin/localegen.in: New script templates.
	* configure.ac: Generate scripts if GCJ is not used.

2008-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Create a cpgenerators JAR file
	for localegen and currencygen.
	
2008-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Remove ASM detection.
	* Makefile.am: Make disabling GNU bytecode library
	work by not building javah and javap when this isn't
	available.
	
2006-09-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* bin/rmic: Remove file.
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Likewise.
	* src/gnu/classpath/tools/rmi/rmic/RMICException.java: Likewise.
	* src/gnu/classpath/tools/rmi/rmic/Variables.java: Likewise.
	* Makefile.am: Remove rmic build logic.

2006-08-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* src/gnu/classpath/tools/rmi/registry/RegistryImpl.java: Remove
	file.
	* src/gnu/classpath/tools/rmi/registry/RegistryImpl_Skel.java:
	Likewise.
	* src/gnu/classpath/tools/rmi/registry/RegistryImpl_Stub.java:
	Likewise.
	* Makefile.am (bin_PROGRAMS): Remove rmiregistry.
	(bin_SCRIPTS): Likewise.
	(rmiregistry_SOURCES): Remove variable.
	(rmiregistry_LINK): Likewise.
	(rmiregistry_LDADD): Likewise.
	(rmiregistry_LDADD): Likewise.
	(rmiregistry_LDFLAGS): Likewise.
	(cptools_jar_SOURCES): Remove rmiregistry.
	(dist-hook): Likewise.
	(rmiregistry): Remove.

2006-05-22  Tom Tromey  <tromey@redhat.com>

	* bin/serialver: Removed.
	* bin/native2ascii: Likewise.
	* Makefile.am (bin_PROGRAMS): Removed serialver.
	(bin_SCRIPTS): Likewise.
	(serialver_SOURCES): Removed.
	(serialver_LINK): Likewise.
	(serialver_LDADD): Likewise.
	(serialver_LDADD): Likewise.