@@ -1,5 +1,12 @@
 2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* INSTALL: Remove ASM requirement.
+	* Makefile.am: Only include GNU bytecode JAR when
+	used.
+	* autogen.sh: Updated to match GNU Classpath.
+
+2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* Makefile.am: Remove previous rules for
 	scripts and install in share/cp-tools instead
 	of share/java.
